--- a/modules/swagger-generator/Dockerfile
+++ b/modules/swagger-generator/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /generator
 COPY target/lib/jetty-runner* /generator/jetty-runner.jar
 COPY target/*.war /generator/swagger-generator.war
 
-ENV GENERATOR_HOST=https://generator.swaggerhub.com/api/swagger.json
+ENV GENERATOR_HOST=192.168.6.247
 
 EXPOSE 8080
 
